--- a/views/my-account.handlebars
+++ b/views/my-account.handlebars
@@ -33,7 +33,7 @@
 	<h1>Log In<h1>
 
 	<div class="buttons">
-		<button><a href="/today">login</button>
+		<button><a href="/">login</button>
 	</div>
 
 </body>
