--- a/views/new-note.handlebars
+++ b/views/new-note.handlebars
@@ -35,7 +35,7 @@
 	<h1>Create a New Note</h1>
 
 	<div class="buttons">
-		<button><a href="/today">Back</button>
+		<button><a href="/">Back</button>
 
 		<br>
 
@@ -62,7 +62,7 @@
 
 
 
-		<button><a href="/today">Create</button>
+		<button><a href="/">Create</button>
 	</div>
 	
 
