--- a/views/note1.handlebars
+++ b/views/note1.handlebars
@@ -42,7 +42,7 @@
 	</div>
 
 	<div class="buttons">
-	<button><a href="/today">Back</button>
+	<button><a href="/">Back</button>
 	</div>
 
 </body>
