--- a/views/note2.handlebars
+++ b/views/note2.handlebars
@@ -42,7 +42,7 @@
 	<p>Due Tuesday 2/16 on Gradescope</p>
 
 	<div class="buttons">
-	<button><a href="/today">Back</button>
+	<button><a href="/">Back</button>
 	</div>
 
 </body>
